Fix Workbench result mode indicators alignment and tooltip clarity (#5709)
* fix(ui): Refactor QueryCardHeader styles and enhance tooltip display
* fix(ui): update tooltip placement
* fix(ui): update tooltip placement with multiple items

--- a/redisinsight/ui/src/components/query/query-card/QueryCardHeader/styles.module.scss
+++ b/redisinsight/ui/src/components/query/query-card/QueryCardHeader/styles.module.scss
@@ -44,9 +44,6 @@ $marginIcon: 12px;
   max-width: 134px;
 }
 
-.mode + .mode {
-  margin-left: 18px;
-}
 
 .timeText,
 .summaryText {
